--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button id='level-2' class='button'>Livello 2</button>
     <button id='level-3' class='button'>Livello 3</button>
 
-    <div class="container">
+    <div id="container">
     
     </div>
 
